<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="@string/result" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="434dp"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:columnCount="1"
            android:paddingLeft="40dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtTrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/trip_name" />

                <TextView
                    android:id="@+id/tripResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtVehical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/vehical" />

                <TextView
                    android:id="@+id/vehicalResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtGas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/gas" />

                <TextView
                    android:id="@+id/gasResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/distanceResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/average" />

                <TextView
                    android:id="@+id/priceResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="-" />

            </LinearLayout>
            
        </GridLayout>

        <Button
            android:id="@+id/btnMap"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_row="0"
            android:text="@string/map" />

    </GridLayout>

</LinearLayout>
